# schemanyd

./: .gitignore  pyproject.toml  readme.md
docs/: graph_info.md
src/schemanyd/: __init__.py  schemanyd.py
src/schemanyd/input/: column_mapping.py  insert.py
src/schemanyd/utility/: database.py  graph.py  path_assistant.py  table_argument.py
src/schemanyd/utility/repr/: graph_visualizations.py
